<resources>
    <string name="app_name">TO DO</string>
    <string name="settings">Settings</string>
    <string name="Tasks">Tasks</string>
    <string name="click_to_add">Click To Add</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="language">Language</string>
    <string name="enter_your_task">Enter your task</string>
    <string name="selectDate">Select Date</string>
    <string name="selectTime">Select Time</string>
    <string name="add_new_task">Add New Task</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="requiredField">Required Field</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="edite">Edite</string>
    <string name="edite_task">Edite Task</string>
    <string name="cantEditeThisTask">Can\'t edite this task</string>
    <string name="standerFormatDate" translatable="false">dd/MM/yyyy</string>
    <string name="mode">Mode</string>
    <string name="taskDeleteSuccessfully">Task Delete Successfully</string>
    <string name="undo">Undo</string>
    <string name="night">Dark</string>
    <string name="light">Light</string>

    <string-array name="languageArr">
        <item>@string/arabic</item>
        <item>@string/english</item>

    </string-array>

    <string-array name="modeArr">
        <item>@string/night</item>
        <item>@string/light</item>
    </string-array>
</resources>