<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="18dp"
        android:text="@string/edite_task"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_your_task">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="@drawable/tv_bg_date"
            android:drawableStart="@drawable/ic_date"
            android:gravity="center"
            android:hint="@string/selectDate"
            android:padding="16dp"
            android:textSize="20sp" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:background="@drawable/tv_bg_date"
            android:drawableStart="@drawable/ic_time"
            android:gravity="center"
            android:hint="@string/selectTime"
            android:padding="16dp"
            android:textSize="20sp" />


    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:text="@string/save"

        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_done"
        app:iconGravity="textEnd" />
</LinearLayout>